2005-11-28 Magnus Hagdorn
 * CF_loadfile.py: add bvel_tavg to calculated variables
 * CF_colourmap.py: add colourmap for bvel_tavg
 * CF_area.py: add velo components for bvel_tavg
 * plotCFvar.py: add glyphs for bvel_tavg
 * plotStreams.py: use bvel_tavg if available

2005-11-15 Magnus Hagdorn
 * CF_options.py: use reasonable font sizes for plots
 * CF_rsl.py: change default RSL data base
 * plot3DProfiles.py: minor improvement
 * plotStreams.py: slightly move colour legend
 * make_anim.py: new script for animating PyCF output
 * setup.py: hook up new script
 
2005-11-23 Magnus Hagdorn
 * CF_options.py: when loading profile, select honour xrange settings
 * CF_profile.py: scale xrange properly
 * CF_profilearea.py: we can now also create an empty AutoXY area
 * plotProfile.py: add xrange settings to options
 * plotCFvar.py: handle a number of profiles
 * plot_extent.py: ditto
 * construct_field.py: new program for setting variable values inside and
   outside a polygon
 * setup.py: hook up construct_field.py

2005-11-20 Magnus Hagdorn
 * CF_area.py: add method to plot averageRSL residuals on map
 * CF_loadfile.py: when loading RSL residuals can also get time average
 * plotRSLres.py: new program to plot RSL residuals on map
 * rsl_res.cpt: new colour map for RSL residuals
 * setup.py: hook up new files

2005-11-16 Magnus Hagdorn
 * CF_rsl.py: new default set of observations for full data base, plot circles
 * CF_options.py: get possible values for rsl selection from keys()
 * CF_loadfile.py: fix minor bug where RSL res are clipped
 * plotRSLloc.py: add option to print RSL location IDs, coords and number of
   observations
 * plotRSLdata.py: new prog for plotting individual RSL observation
 * setup.py: hook up

2005-11-14 Magnus Hagdorn
 * CF_options.py: allow lists of profiles
 * CF_profile.py: rename CFprofile to CFprofvar, new class CFprofile
   for handling profile lines
 * CF_area.py: profile plotter can use profiles given by CFprofile instances