@@ -1,4 +1,9 @@
 2005-11-28 Magnus Hagdorn
+ * CF_diff.py: fix bug where colourmap file got deleted to early
+ * CF_rsl.py: add class for plotting colour histogram of RSL residuals
+ * plotRSLres.py: use new class for colour histograms
+
+2005-11-28 Magnus Hagdorn
  * CF_loadfile.py: add bvel_tavg to calculated variables
  * CF_colourmap.py: add colourmap for bvel_tavg
  * CF_area.py: add velo components for bvel_tavg
